--- a/aws-sqs-rar/pom.xml
+++ b/aws-sqs-rar/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.bpic.aws</groupId>
         <artifactId>aws-sqs-ra</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <packaging>rar</packaging>
 
