--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,8 @@
         <version.maven-source-plugin>3.2.1</version.maven-source-plugin>
         <version.maven-javadoc-plugin>3.1.1</version.maven-javadoc-plugin>
         <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
-        <versio.maven-release-plugin>2.5.3</versio.maven-release-plugin>
+        <version.maven-deploy-plugin>2.8.2</version.maven-deploy-plugin>
+        <version.maven-release-plugin>2.5.3</version.maven-release-plugin>
         <version.ironjacamar-validator-maven>1.4.20.Final</version.ironjacamar-validator-maven>
         <version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
         <version.jgitflow-maven-plugin>1.0-m5.1</version.jgitflow-maven-plugin>
@@ -169,8 +170,13 @@
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>${version.maven-deploy-plugin}</version>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>${versio.maven-release-plugin}</version>
+                        <version>${version.maven-release-plugin}</version>
                         <configuration>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
                             <useReleaseProfile>false</useReleaseProfile>
