Updating develop poms back to pre merge state

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.bpic.aws</groupId>
     <artifactId>aws-sqs-ra</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>aws-sqs-ra</name>
